# psvgamesd

./: .gitignore  LICENSE  README.md
app/: CMakeLists.txt  build.sh
app/sce_sys/livearea/contents/: template.xml
app/src/: main.c  sfo_utils.c  sfo_utils.h
compression/: dictionaryRandomAccess.c
driver/: CMakeLists.txt  build.sh  cmd56_key.c  cmd56_key.h  defines.h  dumper.c  dumper.h  exports.yml  extra.yml  functions.c  functions.h  global_hooks.c  global_hooks.h  global_log.c  global_log.h  hook_ids.c  hook_ids.h  ins_rem_card.c  ins_rem_card.h  mbr_types.h  media_id_emu.c  media_id_emu.h  mmc_emu.c  mmc_emu.h  mmc_reg.h  physical_mmc.c  physical_mmc.h  physical_sd.c  physical_sd.h  psv_types.h  psvgamesd.c  psvgamesd.h  psvgamesd_api.c  psvgamesd_api.h  reader.c  reader.h  reg_common.c  reg_common.h  sd_emu.c  sd_emu.h  (+8 more)
sdioctl/sdioctl/: sdioctl.cpp
